tests/language_modules/13_contract_blocks/valid/function_ensures_result.vf
module FunctionEnsuresResult

function increment(amount: Integer) returns Integer
ensures result = amount + 1
is
    return amount + 1
end increment

end FunctionEnsuresResult