tests/language_modules/13_contract_blocks/invalid_semantics/ensures_must_be_boolean.vf
module EnsuresMustBeBoolean

function current() returns Integer
ensures result
is
    return 1
end current

end EnsuresMustBeBoolean